test/error/parse/ExpectProcedureName.mod
MODULE ExpectProcedureName;
PROCEDURE Foo;
BEGIN
END ;
END ExpectProcedureName.
